hphp/test/vm/final_method1.php.exp
HipHop Fatal error: Cannot override final method Foo::f() in hphp/test/vm/final_method1.php on line 13
